# video-use

./: .env.example  .gitignore  CLAUDE.md  CUSTOM_USAGE.md  README_CUSTOM.md  SKILL.md  labels.json  pyproject.toml
.workbuddy/memory/: 2026-07-10.md  2026-07-11.md  MEMORY.md
helpers/: analyze_content.py  analyze_visual.py  classify_materials.py  dedup_clips.py  generate_edl.py  generate_strategy.py  grade.py  match_shots.py  metadata_to_srt.py  metadata_to_transcript.py  optimize_content_report.py  pack_metadata.py  pack_visual.py  render.py  select_segments.py  srt_to_transcript.py  subtitle_to_transcript.py
