[project]
name = "video-use"
version = "0.1.0"
description = "Conversation-driven video editor skill for Claude Code"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "librosa",
    "matplotlib",
    "pillow",
    "numpy",
]

[project.optional-dependencies]
animations = ["manim"]
snack_visual = [
    "opencv-python-headless>=4.8",
    "imagehash>=4.3",
    "mlx-vlm>=0.1",
]
ollama = ["ollama>=0.1"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
